shortened parameter names for search function

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -225,7 +225,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>cflow2la_is</td>\n",
-       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>Cash flows to lagged assets</td>\n",
        "      <td>wrds.compa.cashflow_vars</td>\n",
        "      <td>dtdate,oancf,ib,dp,at</td>\n",
        "      <td>wrds.compa.clean</td>\n",
@@ -233,7 +233,7 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>cflow2la_cfs</td>\n",
-       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>Cash flows to lagged assets</td>\n",
        "      <td>wrds.compa.cashflow_vars</td>\n",
        "      <td>dtdate,oancf,ib,dp,at</td>\n",
        "      <td>wrds.compa.clean</td>\n",
@@ -241,7 +241,7 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>cflow2la_full</td>\n",
-       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>Cash flows to lagged assets</td>\n",
        "      <td>wrds.compa.cashflow_vars</td>\n",
        "      <td>dtdate,oancf,ib,dp,at</td>\n",
        "      <td>wrds.compa.clean</td>\n",
@@ -283,26 +283,26 @@
        "</div>"
       ],
       "text/plain": [
-       "             name                                  label  \\\n",
-       "0          bookeq                            Book equity   \n",
-       "1           shreq                     Shareholder equity   \n",
-       "2      pref_stock                        Preferred stock   \n",
-       "3          tobinq                                Tobin Q   \n",
-       "4   equityiss_tot                        Equity issuance   \n",
-       "5   equityiss_cfs                        Equity issuance   \n",
-       "6     debtiss_tot                          Debt issuance   \n",
-       "7     debtiss_cfs                          Debt issuance   \n",
-       "8      debtiss_bs                          Debt issuance   \n",
-       "9        ppentpch                  Pct change in net PPE   \n",
-       "10        capx2la                  CAPX to lagged assets   \n",
-       "11            roa                       Return on assets   \n",
-       "12    cflow2la_is  Operating cash flows to lagged assets   \n",
-       "13   cflow2la_cfs  Operating cash flows to lagged assets   \n",
-       "14  cflow2la_full  Operating cash flows to lagged assets   \n",
-       "15         cash2a                Cash holdings to assets   \n",
-       "16        booklev                          Book leverage   \n",
-       "17         div2la             Dividends to lagged assets   \n",
-       "18         rep2la           Repurchases to lagged assets   \n",
+       "             name                         label  \\\n",
+       "0          bookeq                   Book equity   \n",
+       "1           shreq            Shareholder equity   \n",
+       "2      pref_stock               Preferred stock   \n",
+       "3          tobinq                       Tobin Q   \n",
+       "4   equityiss_tot               Equity issuance   \n",
+       "5   equityiss_cfs               Equity issuance   \n",
+       "6     debtiss_tot                 Debt issuance   \n",
+       "7     debtiss_cfs                 Debt issuance   \n",
+       "8      debtiss_bs                 Debt issuance   \n",
+       "9        ppentpch         Pct change in net PPE   \n",
+       "10        capx2la         CAPX to lagged assets   \n",
+       "11            roa              Return on assets   \n",
+       "12    cflow2la_is   Cash flows to lagged assets   \n",
+       "13   cflow2la_cfs   Cash flows to lagged assets   \n",
+       "14  cflow2la_full   Cash flows to lagged assets   \n",
+       "15         cash2a       Cash holdings to assets   \n",
+       "16        booklev                 Book leverage   \n",
+       "17         div2la    Dividends to lagged assets   \n",
+       "18         rep2la  Repurchases to lagged assets   \n",
        "\n",
        "                        output_of  \\\n",
        "0          wrds.compa.book_equity   \n",
@@ -759,8 +759,8 @@
     "#| export\n",
     "@call_parse\n",
     "def search(query: str,              # What to search for \n",
-    "           which_meta: str='all',   #\"all\", \"features\", or \"raw\"; specifies the function that fetches the metadata you want to search through\n",
-    "           meta_field: str='label', # Which column in the metadata table you want to search through. Use \"name\" to search variable names.  \n",
+    "           meta: str='all',   #\"all\", \"features\", or \"raw\"; specifies the function that fetches the metadata you want to search through\n",
+    "           field: str='label', # Which column in the metadata table you want to search through. Use \"name\" to search variable names.  \n",
     "           limit: int=10,           # How many results to display                      \n",
     "           ) -> pd.DataFrame:\n",
     "    \"Search for `query` in metadata returned by f`{meta_func}_metadata`; return `limit` number of results\"\n",
@@ -770,8 +770,8 @@
     "\n",
     "    try:   \n",
     "        import finsets\n",
-    "        metadata = getattr(finsets, f'{which_meta}_metadata')()\n",
-    "        results = process.extractBests(query, metadata[meta_field], \n",
+    "        metadata = getattr(finsets, f'{meta}_metadata')()\n",
+    "        results = process.extractBests(query, metadata[field], \n",
     "                                        scorer = fuzz.token_sort_ratio,\n",
     "                                        limit=limit)\n",
     "        rows = [x[2] for x in results]\n",
@@ -1004,14 +1004,10 @@
        "      <th>NAME</th>\n",
        "      <th>LABEL</th>\n",
        "      <th>OUTPUT_OF</th>\n",
-       "      <th>INPUTS</th>\n",
-       "      <th>INPUTS_GENERATED_BY</th>\n",
        "      <th>TYPE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SCORE</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1024,8 +1020,6 @@
        "      <td>at</td>\n",
        "      <td>Assets - Total</td>\n",
        "      <td>wrds.compa.clean</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1033,8 +1027,6 @@
        "      <td>act</td>\n",
        "      <td>Current Assets - Total</td>\n",
        "      <td>wrds.compa.clean</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1042,8 +1034,6 @@
        "      <td>ao</td>\n",
        "      <td>Assets - Other</td>\n",
        "      <td>wrds.compa.clean</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1051,8 +1041,6 @@
        "      <td>batr</td>\n",
        "      <td>Benefits Assumed - Total</td>\n",
        "      <td>wrds.compa.clean</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1060,8 +1048,6 @@
        "      <td>dptb</td>\n",
        "      <td>Deposits - Total - Banks</td>\n",
        "      <td>wrds.compa.clean</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1069,21 +1055,13 @@
        "</div>"
       ],
       "text/plain": [
-       "       NAME                      LABEL         OUTPUT_OF INPUTS  \\\n",
-       "SCORE                                                             \n",
-       "100      at            Assets - Total   wrds.compa.clean    NaN   \n",
-       "75      act    Current Assets - Total   wrds.compa.clean    NaN   \n",
-       "75       ao            Assets - Other   wrds.compa.clean    NaN   \n",
-       "71     batr  Benefits Assumed - Total   wrds.compa.clean    NaN   \n",
-       "69     dptb  Deposits - Total - Banks   wrds.compa.clean    NaN   \n",
-       "\n",
-       "      INPUTS_GENERATED_BY    TYPE  \n",
-       "SCORE                              \n",
-       "100                   NaN  double  \n",
-       "75                    NaN  double  \n",
-       "75                    NaN  double  \n",
-       "71                    NaN  double  \n",
-       "69                    NaN  double  "
+       "       NAME                      LABEL         OUTPUT_OF    TYPE\n",
+       "SCORE                                                           \n",
+       "100      at            Assets - Total   wrds.compa.clean  double\n",
+       "75      act    Current Assets - Total   wrds.compa.clean  double\n",
+       "75       ao            Assets - Other   wrds.compa.clean  double\n",
+       "71     batr  Benefits Assumed - Total   wrds.compa.clean  double\n",
+       "69     dptb  Deposits - Total - Banks   wrds.compa.clean  double"
       ]
      },
      "execution_count": null,
@@ -1092,7 +1070,183 @@
     }
    ],
    "source": [
-    "search('total assets', limit=5)"
+    "search('total assets', meta = 'raw', limit=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>LABEL</th>\n",
+       "      <th>OUTPUT_OF</th>\n",
+       "      <th>INPUTS</th>\n",
+       "      <th>INPUTS_GENERATED_BY</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SCORE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>cflow2la_is</td>\n",
+       "      <td>Cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>cflow2la_cfs</td>\n",
+       "      <td>Cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>cflow2la_full</td>\n",
+       "      <td>Cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>cash2a</td>\n",
+       "      <td>Cash holdings to assets</td>\n",
+       "      <td>wrds.compa.liquidity_vars</td>\n",
+       "      <td>che,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>capx2la</td>\n",
+       "      <td>CAPX to lagged assets</td>\n",
+       "      <td>wrds.compa.investment_vars</td>\n",
+       "      <td>ppent,capx,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>roa</td>\n",
+       "      <td>Return on assets</td>\n",
+       "      <td>wrds.compa.profitability_vars</td>\n",
+       "      <td>ib,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>div2la</td>\n",
+       "      <td>Dividends to lagged assets</td>\n",
+       "      <td>wrds.compa.payout_vars</td>\n",
+       "      <td>dvc,prstkc,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>rep2la</td>\n",
+       "      <td>Repurchases to lagged assets</td>\n",
+       "      <td>wrds.compa.payout_vars</td>\n",
+       "      <td>dvc,prstkc,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>tobinq</td>\n",
+       "      <td>Tobin Q</td>\n",
+       "      <td>wrds.compa.tobin_q</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>shreq</td>\n",
+       "      <td>Shareholder equity</td>\n",
+       "      <td>wrds.compa.book_equity</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                NAME                         LABEL  \\\n",
+       "SCORE                                                \n",
+       "54       cflow2la_is   Cash flows to lagged assets   \n",
+       "54      cflow2la_cfs   Cash flows to lagged assets   \n",
+       "54     cflow2la_full   Cash flows to lagged assets   \n",
+       "42            cash2a       Cash holdings to assets   \n",
+       "32           capx2la         CAPX to lagged assets   \n",
+       "31               roa              Return on assets   \n",
+       "28            div2la    Dividends to lagged assets   \n",
+       "26            rep2la  Repurchases to lagged assets   \n",
+       "24            tobinq                       Tobin Q   \n",
+       "21             shreq            Shareholder equity   \n",
+       "\n",
+       "                           OUTPUT_OF  \\\n",
+       "SCORE                                  \n",
+       "54          wrds.compa.cashflow_vars   \n",
+       "54          wrds.compa.cashflow_vars   \n",
+       "54          wrds.compa.cashflow_vars   \n",
+       "42         wrds.compa.liquidity_vars   \n",
+       "32        wrds.compa.investment_vars   \n",
+       "31     wrds.compa.profitability_vars   \n",
+       "28            wrds.compa.payout_vars   \n",
+       "26            wrds.compa.payout_vars   \n",
+       "24                wrds.compa.tobin_q   \n",
+       "21            wrds.compa.book_equity   \n",
+       "\n",
+       "                                                  INPUTS INPUTS_GENERATED_BY  \n",
+       "SCORE                                                                         \n",
+       "54                                 dtdate,oancf,ib,dp,at    wrds.compa.clean  \n",
+       "54                                 dtdate,oancf,ib,dp,at    wrds.compa.clean  \n",
+       "54                                 dtdate,oancf,ib,dp,at    wrds.compa.clean  \n",
+       "42                                                che,at    wrds.compa.clean  \n",
+       "32                                         ppent,capx,at    wrds.compa.clean  \n",
+       "31                                                 ib,at    wrds.compa.clean  \n",
+       "28                                         dvc,prstkc,at    wrds.compa.clean  \n",
+       "26                                         dvc,prstkc,at    wrds.compa.clean  \n",
+       "24     at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...    wrds.compa.clean  \n",
+       "21           at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean  "
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search('cash flows', meta = 'features')"
    ]
   },
   {
@@ -1212,7 +1366,7 @@
     }
    ],
    "source": [
-    "search('txditc', meta_field='name', limit=5)"
+    "search('txditc', field='name', limit=5)"
    ]
   },
   {
